--- a/src/sass/utilities/variables.scss
+++ b/src/sass/utilities/variables.scss
@@ -2,3 +2,5 @@ $forest-green: #164740;
 $lavender: #D1BCE3;
 $dark-purple: #29274C;
 $white: #FFFFFF;
+$midnight-blue: #161663;
+$light-lavender: #eee9fa;
