updated education to use local storage and profile to update it

--- a/src/sass/layout/profile.scss
+++ b/src/sass/layout/profile.scss
@@ -43,9 +43,8 @@
   
 .input-container {
     position: relative;
-    display: flex;
-    flex-direction: column;
-    font-family: "arial";
+    // display: flex;
+    // flex-direction: column;
 
     label {
         position: absolute;
