--- a/src/sass/layout/profile.scss
+++ b/src/sass/layout/profile.scss
@@ -43,8 +43,6 @@
   
 .input-container {
     position: relative;
-    // display: flex;
-    // flex-direction: column;
 
     label {
         position: absolute;
@@ -58,6 +56,17 @@
         line-height: 1;
         // make equal to padding in input
         left: 21px;
+    }
+
+    .month {
+        position: absolute;
+        pointer-events: none;
+        // moves label vertically and horizontally
+        transform: translate(-6px, 9px) scale(0.8);
+        transform-origin: top left;
+        transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+        color: #6f81a5;
+        font-size: 18px;
     }
 
     &:focus-within label {
@@ -89,6 +98,6 @@
 
         &:focus {
             box-shadow: 0 0 8px 8px $light-lavender;
-        }
+        } 
     }
 }
