--- a/src/sass/layout/experience.scss
+++ b/src/sass/layout/experience.scss
@@ -3,3 +3,61 @@
 * {
     font-family: "lucida";
 }
+
+html { overflow-y: scroll; }
+
+.tag-container {
+    margin-bottom: 20px;
+
+    .experience-tag {
+        padding: 10px 30px 10px 20px;
+        border-radius: 40px;
+        font-size: 48px;
+        position: relative;
+        margin-left: 10px;
+    }
+    &:hover {
+        .experience-tag {
+            background-color: #f0f0f0;
+        }
+        cursor: pointer;
+    }
+}
+
+.generate-button {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    font-size: 32px;
+    background-color: blue;
+    margin-top: 30px;
+    padding: 15px;
+    border-radius: 30px;
+}
+
+// .relative-div {
+//     position: absolute;
+// }
+
+.container-div {
+    position: absolute;
+    background-color: green;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0px 30px 0px 0px;
+}
+
+.vl {
+    border-left: 1px solid green;
+    height: 100%;
+    position: absolute;
+    left: 320px;
+    margin-left: -.5px;
+    top: 0;
+  }
+
+.greeting {
+    font-size: 64px;
+    margin-left: 60px;
+    margin-top: 30px;
+}
