--- a/src/sass/layout/profile.scss
+++ b/src/sass/layout/profile.scss
@@ -3,8 +3,9 @@
 .container {
     height: 100%;
     width: 100%;
-    position: fixed;
-    display: flex;
+    position: relative;
+    // display: flex;
+    background-color: green;
 }
 
 .prompt-header {
