--- a/src/sass/layout/experience.scss
+++ b/src/sass/layout/experience.scss
@@ -4,8 +4,6 @@
     font-family: "lucida";
 }
 
-html { overflow-y: scroll; }
-
 .tag-container {
     margin-bottom: 20px;
 
@@ -26,13 +24,62 @@ html { overflow-y: scroll; }
 
 .generate-button {
     position: absolute;
-    left: 50%;
+    left: 45%;
     transform: translate(-50%);
     font-size: 32px;
     background-color: blue;
-    margin-top: 30px;
+    margin-top: 20px;
     padding: 15px;
     border-radius: 30px;
+}
+
+.left-container {
+    left: 0px;
+    width: 21%;
+    height: 100%;
+    position: fixed;
+    // background-color: green;
+    border-right: 1px solid green;
+}
+
+.right-container {
+    right: 0px;
+    width: 79%;
+    height: 100%;
+    position: fixed;
+    // display: flex;
+    // background-color: orange;
+}
+
+.current-education {
+    background-color: blue;
+    left: 60%;
+    position: absolute;
+    top: 55%;
+    width: 40%;
+    height: 503px;
+    transform: translate(-50%, -50%);
+}
+
+.education-item {
+//     position: inherit;
+//     border-radius: 15px;
+    background-color: white;
+//     padding: 5px 10px; 
+//     float: left;
+}
+
+.edit-education-button {
+//     position: inherit;
+//     float: right;
+    position: absolute;
+    background-color: yellow;
+    left: 100%;
+    transform: translate(-100%);
+}
+
+.education-div {
+    background-color: aqua;
 }
 
 // .relative-div {
@@ -41,7 +88,7 @@ html { overflow-y: scroll; }
 
 .container-div {
     position: absolute;
-    background-color: green;
+    // background-color: green;
     top: 50%;
     transform: translateY(-50%);
     padding: 0px 30px 0px 0px;
@@ -50,8 +97,7 @@ html { overflow-y: scroll; }
 .vl {
     border-left: 1px solid green;
     height: 100%;
-    position: absolute;
-    left: 320px;
+    position: relative;
     margin-left: -.5px;
     top: 0;
   }
