--- a/src/sass/layout/profile.scss
+++ b/src/sass/layout/profile.scss
@@ -10,8 +10,8 @@
 
 .prompt-header {
     font-size: 9vmin;
-    margin-left: 6vmin;
-    margin-top: 3.2vmin;
+    // margin-left: 6vmin;
+    // margin-top: 3.2vmin;
     // margin: 0 auto;
     color: $midnight-blue;
 }
@@ -25,7 +25,6 @@
         border-radius: 12px;
         color: $light-lavender;
         font-size: 24px;
-        
         &:hover {
             cursor: pointer;
         }
@@ -33,10 +32,11 @@
 }
   
 .profile-form {
-    max-width: 340px;
-    position: fixed;
-    top: 30%;
-    left: 40%;
+    // max-width: 340px;
+    position: absolute;
+    top: 55%;
+    transform: translate(-25%, -50%);
+    left: 12.5%;
     display: grid;
     grid-template-columns: 1fr;
     gap: 16px;
