--- a/src/sass/layout/profile.scss
+++ b/src/sass/layout/profile.scss
@@ -5,7 +5,7 @@
     width: 100%;
     position: relative;
     // display: flex;
-    background-color: green;
+    // background-color: $light-lavender;
 }
 
 .prompt-header {
