made small text input for experiences; working on month labeling

--- a/src/sass/layout/profile.scss
+++ b/src/sass/layout/profile.scss
@@ -45,7 +45,7 @@
 .input-container {
     position: relative;
 
-    label {
+    .label {
         position: absolute;
         pointer-events: none;
         // moves label vertically and horizontally
@@ -81,7 +81,7 @@
         font-size: 18px;
     }
 
-    input {
+    .input {
         height: 64px;
         border-radius: 24px;
         border: none;
@@ -100,5 +100,54 @@
         &:focus {
             box-shadow: 0 0 8px 8px $light-lavender;
         } 
+    }
+
+    .small-text {
+        font-size: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+
+        height: 48px;
+        border-radius: 24px;
+        border: none;
+        // positions input cursor: padding put on top to move down and adjust spacing bt input and placeholder/label
+        padding: 13px 21px 0px;
+        line-height: 1;
+        outline: none;
+        box-shadow: none;
+        transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+        background-color: white;
+        outline: solid;
+        outline-color: $midnight-blue;
+        outline-width: .3vmin;
+
+        &:focus {
+            box-shadow: 0 0 8px 8px $light-lavender;
+        }
+    }
+
+    label {
+        position: absolute;
+        pointer-events: none;
+        // moves label vertically and horizontally
+        transform: translate(0px, 20px) scale(1);
+        transform-origin: top left;
+        transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+        color: #6f81a5;
+        font-size: 22px;
+        line-height: 1;
+        // make equal to padding in input
+        left: 21px;
+    }
+
+    .month {
+        position: absolute;
+        pointer-events: none;
+        // moves label vertically and horizontally
+        transform: translate(-6px, 9px) scale(0.8);
+        transform-origin: top left;
+        transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+        color: #6f81a5;
+        font-size: 18px;
     }
 }
