--- a/src/sass/layout/profile.scss
+++ b/src/sass/layout/profile.scss
@@ -4,7 +4,6 @@
     height: 100%;
     width: 100%;
     position: relative;
-    // display: flex;
     // background-color: $light-lavender;
 }
 
@@ -30,22 +29,28 @@
         }
     }
 }
-  
+
 .profile-form {
     // max-width: 340px;
     position: absolute;
-    top: 55%;
-    transform: translate(-25%, -50%);
-    left: 12.5%;
+    top: 1%;
+    transform: translate(-20%, 2%);
+    left: 10%;
     display: grid;
     grid-template-columns: 1fr;
-    gap: 16px;
+    gap: 14px;
+}
+
+.item-div {
+    position: relative;
+    // background-color: aqua;
+    margin-bottom: 15px;
 }
   
-.input-container {
+span.normal-input {
     position: relative;
 
-    .label {
+    label {
         position: absolute;
         pointer-events: none;
         // moves label vertically and horizontally
@@ -66,7 +71,7 @@
         transform: translate(-6px, 9px) scale(0.8);
         transform-origin: top left;
         transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-        color: #6f81a5;
+        // color: green;
         font-size: 18px;
     }
 
@@ -81,7 +86,7 @@
         font-size: 18px;
     }
 
-    .input {
+    input {
         height: 64px;
         border-radius: 24px;
         border: none;
@@ -100,54 +105,5 @@
         &:focus {
             box-shadow: 0 0 8px 8px $light-lavender;
         } 
-    }
-
-    .small-text {
-        font-size: 20px;
-        margin-right: 20px;
-        margin-bottom: 20px;
-
-        height: 48px;
-        border-radius: 24px;
-        border: none;
-        // positions input cursor: padding put on top to move down and adjust spacing bt input and placeholder/label
-        padding: 13px 21px 0px;
-        line-height: 1;
-        outline: none;
-        box-shadow: none;
-        transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-        background-color: white;
-        outline: solid;
-        outline-color: $midnight-blue;
-        outline-width: .3vmin;
-
-        &:focus {
-            box-shadow: 0 0 8px 8px $light-lavender;
-        }
-    }
-
-    label {
-        position: absolute;
-        pointer-events: none;
-        // moves label vertically and horizontally
-        transform: translate(0px, 20px) scale(1);
-        transform-origin: top left;
-        transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-        color: #6f81a5;
-        font-size: 22px;
-        line-height: 1;
-        // make equal to padding in input
-        left: 21px;
-    }
-
-    .month {
-        position: absolute;
-        pointer-events: none;
-        // moves label vertically and horizontally
-        transform: translate(-6px, 9px) scale(0.8);
-        transform-origin: top left;
-        transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-        color: #6f81a5;
-        font-size: 18px;
     }
 }
