finished skills+ page

--- a/src/sass/layout/experience.scss
+++ b/src/sass/layout/experience.scss
@@ -35,11 +35,9 @@
 }
 
 .tag {
-    position: absolute;
-    left: 24%;
-    top: 24%;
+    // position: absolute;
     height: 61px;
-    // padding: 13px 25px 10px 10px;
+    padding: 13px 25px 10px 10px;
     font-size: 18px;
     border-radius: 22px;
     // outline: solid;
