finished edits on create page; deleted unused files

--- a/src/sass/layout/education.scss
+++ b/src/sass/layout/education.scss
@@ -56,7 +56,9 @@
 .item-div {
     position: relative;
     // background-color: aqua;
-    margin-bottom: 15px;
+    margin-top: 7.5px;
+    margin-bottom: 7.5px;
+    margin-left: 8px;
 }
 
 .current-education-header {
