--- a/src/sass/layout/create.scss
+++ b/src/sass/layout/create.scss
@@ -8,12 +8,15 @@
 .column {
     flex: 1;
     max-width: 33.33%;
-    background-color: orange;
+    border-right: 1px solid $light-lavender;
+    overflow: auto;
+    // background-color: orange;
 }
 
 .section-header {
     text-align: center;
-    margin-top: 10px;
-    font-size: 32px;
+    margin-top: 14px;
+    margin-bottom: 25px;
+    font-size: 36px;
 }
 
