--- a/src/sass/layout/navbar.scss
+++ b/src/sass/layout/navbar.scss
@@ -29,6 +29,13 @@
     padding: 15px;
     border-radius: 38px;
 
+    &.middle {
+        // position: sticky;
+        left: 50%;
+        top: 80%;
+        // transform: translate(-50%, -100%)
+    }
+
     &:hover {
         cursor: pointer;
     }
