updated clicked coloring

--- a/src/sass/layout/experience.scss
+++ b/src/sass/layout/experience.scss
@@ -22,7 +22,8 @@
         cursor: pointer;
     }
     &.clicked {
-        background-color: green;
+        background-color: $midnight-blue;
+        color: $white;
     }
 }
 
